# WordClockScreen

./: .gitignore  platformio.ini
include/: lv_conf.h
src/: credentials.h.example  main.cpp  word_clock.cpp  word_clock.h  word_clock_anim.cpp  word_clock_anim.h
src/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_AQIHumidity.c  ui_AQIHumidity.h  ui_Day_Date_Month.c  ui_Day_Date_Month.h  ui_Indoor_Weather.c  ui_Indoor_Weather.h  ui_Outdoor_Weather.c  ui_Outdoor_Weather.h  ui_Time.c  ui_Time.h  ui_comp.c  ui_comp.h  ui_comp_hook.c  ui_comp_hook.h  ui_comp_seconds.c  ui_comp_seconds.h  ui_comp_thermorot.c  ui_comp_thermorot.h  ui_events.h  ui_font_Airstrike100.c  ui_font_Chillax100.c  ui_font_Chillax120.c  ui_font_Chillax80.c  ui_font_ChillaxReg130.c  ui_font_ChillaxReg70full.c  ui_font_DateFont.c  ui_font_Jersy.c  ui_font_Mythical.c  ui_font_TimeFont.c  ui_helpers.c  ui_helpers.h  ui_img_10717917.c  ui_img_1533475108.c  ui_img_1641329436.c  ui_img_1663658587.c  ui_img_336602858.c  (+17 more)
